# fiks-2021-22

./: Cargo.toml  log.txt
src/kolo1/: byrokracie.rs  byrokracie.txt  input_byrokracie.txt  input_pozemky.txt  pozemky.rs  pozemky.txt  sponzori.rs  sponzori.txt
src/kolo2/: .klece.rs.kate-swp  delnici.rs  delnici.txt  delnici_input.txt  input_delnici.txt  klece.rs  prohlidkove-okruhy.rs  prohlidkove-okruhy.txt
src/kolo3/: penkavy.rs  ryby.rs  ryby.txt  sloni.rs
src/kolo4/: cpu.rs  cpu.txt  krmeni.rs  krmeni.txt
src/kolo5/: vchod.rs  vchod.txt
