[package]
name = "fiks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
build-klece = ["oorandom", "signal"]

[[bin]]
name = "byrokracie"
path = "src/kolo1/byrokracie.rs"

[[bin]]
name = "sponzori"
path = "src/kolo1/sponzori.rs"

[[bin]]
name = "pozemky"
path = "src/kolo1/pozemky.rs"

[[bin]]
name = "delnici"
path = "src/kolo2/delnici.rs"

[[bin]]
name = "klece"
path = "src/kolo2/klece.rs"
required-features = ["build-klece"]

[[bin]]
name = "prohlidkove-okruhy"
path = "src/kolo2/prohlidkove-okruhy.rs"

[[bin]]
name = "penkavy"
path = "src/kolo3/penkavy.rs"

[[bin]]
name = "sloni"
path = "src/kolo3/sloni.rs"

[[bin]]
name = "ryby"
path = "src/kolo3/ryby.rs"

[[bin]]
name = "krmeni"
path = "src/kolo4/krmeni.rs"


[[bin]]
name = "cpu"
path = "src/kolo4/cpu.rs"

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
oorandom = {version = "11.1.3", optional = true}
signal = {version = "0.7.0", optional = true}
crossbeam-channel = "0.5.2"